@@ -475,3 +475,7 @@ S3method(vcov,svynls)
 
 
 S3method(svyscoretest,svyglm)
+
+
+S3method(unwrap,default)
+S3method(unwrap2, default)
