@@ -68,6 +68,7 @@ requests from users, including:
   Kirill Mueller
   Daniel Oehm
   Jean Opsomer
+  Raymond Pan
   Gonzalo Perez
   Djalma Pessoa
   Molly Petersen
@@ -101,6 +102,7 @@ requests from users, including:
   Thomas Yokota
   Diego Zardetto
   Alan Zaslavsky
+  Stephanie Zimmer
   Tomasz Żółtak
 and from dicussions with Chris Wild and Alastair Scott. 
 
